@@ -48,7 +48,6 @@ SHA256 3ca67e7abfc392f626098b135db089ba01215f9f7c34105d6c2ffc9a220910c7 t/02-bct
 SHA256 de5710308891d3c71c95c259c79b2c1cdccf2e37c6d99b8a07c8e67f19c3022c t/10-fullcopy.t
 SHA256 99106c47629c31d0058471d1b88403698edbe4e146b0aacec7e870a689a26564 t/10-makedelta.t
 SHA256 ba0636552517bc13ca6751d7269b9b0448906649d076645862e7e612af9f00b7 t/10-object-names.t
-SHA256 ab67412e70fdb3f92146481ad218f694ab211f914c7d4228ce6d4e77a37486d9 t/20-drizzle.t
 SHA256 2cc4d779fa25adb57a82e0e44284e03ff11c97fcb66cdfef80df933c0404e05b t/20-firebird.t
 SHA256 037148afd1734f1d7246032492feb685fa0cea61a1bf681f19490f0e95cb4b01 t/20-mariadb.t
 SHA256 61976021f99a566734ea71e072b3c8f50892d986bf0f39278b3b31a401e0d338 t/20-mongo.t
