@@ -553,9 +553,6 @@
 <li><p><code>postgres</code></p>
 
 </li>
-<li><p><code>drizzle</code></p>
-
-</li>
 <li><p><code>mongo</code></p>
 
 </li>
@@ -1603,9 +1600,6 @@
 <ul>
 
 <li><p><code>postgres</code></p>
-
-</li>
-<li><p><code>drizzle</code></p>
 
 </li>
 <li><p><code>mongo</code></p>
